--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Resume</title><link rel='stylesheet' href='style.css'></head><body><h1>Моє Резюме</h1><p>Студент. Хмарні технології. Практична робота №11.</p></body></html>
+<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Beta Version</title></head><body><h1>Світла версія сайту</h1></body></html>
